--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="/southlamp.github.io/umi.css" />
+    <link rel="stylesheet" href="/umi.css" />
     <script>
-      window.routerBase = "/southlamp.github.io";
+      window.routerBase = "/";
     </script>
     <script>
       //! umi version: 3.5.37
@@ -31,6 +31,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/southlamp.github.io/umi.js"></script>
+    <script src="/umi.js"></script>
   </body>
 </html>
