deploy: 11c345794818062a6f0ae99a24d42ccf859a5f1e

--- a/start/index.html
+++ b/start/index.html
@@ -27,7 +27,7 @@
         );
       })();
     </script>
-    <title>慢慢走</title>
+    <title>Getting Started - 慢慢走</title>
   </head>
   <body>
     <div id="root"></div>
