deploy: d12dfb984fdc9c24f08b5841b3df63372be6ca68

--- a/~demos/gitalk-demo/index.html
+++ b/~demos/gitalk-demo/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>Github Pages - 慢慢走</title>
+    <title>慢慢走</title>
   </head>
   <body>
     <div id="root"></div>
