deploy: 2b2c7da94217892017a54c5dcea80a9ba16698f8

--- a/berantakan/component-doc/index.html
+++ b/berantakan/component-doc/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>从零开发 npm 包及对应文档 - 慢慢走</title>
+    <title>从零开发 npm 包及对应文档 - 说书人</title>
   </head>
   <body>
     <div id="root"></div>
