--- a/berantakan/promise/index.html
+++ b/berantakan/promise/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>手写 promise基本逻辑 - 慢慢走</title>
+    <title>手写 promise基本逻辑 - 说书人</title>
   </head>
   <body>
     <div id="root"></div>
