--- a/berantakan/qiankun/index.html
+++ b/berantakan/qiankun/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>JS 循环 - 说书人</title>
+    <title>微前端-qiankun - 说书人</title>
   </head>
   <body>
     <div id="root"></div>
