--- a/berantakan/react-dnd/index.html
+++ b/berantakan/react-dnd/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>react-dnd拖拽组件学习 - 慢慢走</title>
+    <title>react-dnd拖拽组件学习 - 说书人</title>
   </head>
   <body>
     <div id="root"></div>
