--- a/berantakan/reg-exp/index.html
+++ b/berantakan/reg-exp/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>JS正则表达式 - 慢慢走</title>
+    <title>JS正则表达式 - 说书人</title>
   </head>
   <body>
     <div id="root"></div>
