--- a/berantakan/scripts/index.html
+++ b/berantakan/scripts/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>JS 循环 - 说书人</title>
+    <title>script 脚本命令和npm包 - 说书人</title>
   </head>
   <body>
     <div id="root"></div>
