--- a/berantakan/type-script/index.html
+++ b/berantakan/type-script/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>TS关键字和工具类型 - 慢慢走</title>
+    <title>TS关键字和工具类型 - 说书人</title>
   </head>
   <body>
     <div id="root"></div>
