--- a/gitalk/index.html
+++ b/gitalk/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>Gitalk评论的搭建使用 - 慢慢走</title>
+    <title>Gitalk评论的搭建使用 - 说书人</title>
   </head>
   <body>
     <div id="root"></div>
