--- a/berantakan/easy-lend/index.html
+++ b/berantakan/easy-lend/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>记录开发easylend项目 - 慢慢走</title>
+    <title>记录开发easylend项目 - 说书人</title>
   </head>
   <body>
     <div id="root"></div>
