--- a/berantakan/jsonstringfy/index.html
+++ b/berantakan/jsonstringfy/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>JSON.stringfy - 慢慢走</title>
+    <title>JSON.stringfy - 说书人</title>
   </head>
   <body>
     <div id="root"></div>
