--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         );
       })();
     </script>
-    <title>Github Pages - 慢慢走</title>
+    <title>Github Pages - 说书人</title>
   </head>
   <body>
     <div id="root"></div>
